--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "vue-router": "^3.0.1",
     "better-scroll": "^1.13.2",
     "axios": "^0.18.0",
-    "vue-lazyload": "^1.2.6"
+    "vue-lazyload": "^1.2.6",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
